samples/_failures_safe/1761366548_7cf060_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96468726.c: In function ‘main’:
./samples/SAFE/__tmp_96468726.c:158:5: error: expected expression at end of input
  158 |     if (a <
      |     ^~
./samples/SAFE/__tmp_96468726.c:158:5: error: expected declaration or statement at end of input
